Cambios en SwaggerController
